add channel restriction

--- a/config.json.example
+++ b/config.json.example
@@ -4,6 +4,7 @@
     "discord": {
         "prefix": "",
         "adminIDs": [""],
+        "channelIDs": [""],
         "token": ""
     },
     "pm2": {
