--- a/config.json.example
+++ b/config.json.example
@@ -17,6 +17,7 @@
         "user": "",
         "password": "",
         "database": "",
-        "truncateCommand": ""
+        "truncateCommand": "",
+        "onlyReloadBeforeTime": ""
     }
 }
